# molecube2

./: .gitignore  CMakeLists.txt  README.md
cmake/: CMakePathMacros.cmake  FindPython.cmake  PythonMacros.cmake
data/: CMakeLists.txt  molecube.service  molecube.sysusers  molecube.tmpfiles  molecube.yml  test-molecube.yml
lib/: CMakeLists.txt  config.cpp  config.h  controller.cpp  controller.h  ctrl_iface.cpp  ctrl_iface.h  dummy_controller.cpp  dummy_controller.h  dummy_pulser.cpp  dummy_pulser.h  namesconfig.cpp  namesconfig.h  pulser.cpp  pulser.h  pulser_common.h  server.cpp  server.h
server/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  crc32c_table.h  test_DDS.cpp  test_DDS_full_ramp.cpp  test_DDS_ramp.cpp  test_benchmark_pulse.cpp  test_controller.cpp  test_dds_actions.cpp  test_dma.cpp  test_dump_all_dds.cpp  test_init_dds.cpp  test_pulser.cpp  test_regs.cpp  test_sequence.cpp  test_set_clock.cpp  test_set_dds.cpp  test_set_ttl.cpp  test_trigger.cpp  testseq.cmdlist
test/clients/: startup.cmdlist  test_client.py
